# rishat

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env_mode  pyproject.toml
config/: urls.py
config/settings/: settings.py
pay_service/: admin.py  api.py  apps.py  models.py  serializers.py  urls.py  views.py
pay_service/migrations/: 0001_initial.py
pay_service/templates/pay_service/: landing.html
